# generate-headers

./: .gitignore  Makefile.am  README  configure.ac
man/: generate-headers.1
src/: generate-headers.c
tests/: allow-dash.test  append.test  directory-input.test  directory-output.test  invalid-input.test  table-name.test  unistd_32.test  unistd_32_unordered.h  unistd_32_unordered.test
